
------ current release ---------------------------

1.0.0 ()
 + Initial release supporting three bar styles, percentage, elapsed, remaining,
   labels and width settings.

------ old releases ------------------------------

Vramsteg project officially began 6th June, 2010.
